# injection-molding-optimizer

./: .cursorrules  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  bo_init_plan.xlsx  build_exe.py  config.py  fitness_calculate.py  fitness_gui.py  gui_main.py  main.py  optimizer_base.py  optimizer_standard.py  push_to_github.sh  pyproject.toml  requirements.txt  runner.py  test_functions.py  utils.py  代表值_S1均值+S2均值_T1-T19.xlsx  代表值_S1均值+S2均值_初始数据19.xlsx  代表值_S1均值+S2均值_第1批次.xlsx  初始数据19.xlsx  工艺推荐agent设计规划.md  工艺推荐agent设计规范.md  注塑工艺智能推荐系统使用手册.md  第1批次.xlsx
.claude/: settings.local.json
configs/: CPC-600-WB-清洗.json  LS39860A-903.json  LS39929A-901.json
data/checkpoints/: b45fd3b6.pkl  ed030ec0.pkl
data/records/: 初始试模清单.xlsx  第10批次建议参数.xlsx  第1批次建议参数.xlsx  第2批次建议参数.xlsx  第3批次建议参数.xlsx  第4批次建议参数.xlsx  第5批次建议参数.xlsx  第6批次建议参数.xlsx  第7批次建议参数.xlsx  第8批次建议参数.xlsx  第9批次建议参数.xlsx
src/injection_molding/: __init__.py  __main__.py
src/injection_molding/agents/: __init__.py
src/injection_molding/core/: __init__.py  runner.py
web/: index.html
web/css/: style.css
web/js/: app.js
web_app/: README.md  pyproject.toml  start.sh  test_websocket.py
web_app/backend/app/: main.py
web_app/backend/app/core/: config.py
web_app/backend/app/models/: schemas.py
web_app/backend/app/services/: async_runner.py  session_manager.py
web_app/backend/tests/: __init__.py  run_tests.py  test_01_session.py  test_02_optimization.py  test_03_data_submit.py  test_05_rollback.py  test_07_exceptions.py  test_08_integration.py  test_client.py  test_safety_boundary.py  test_save_exit.py
web_app/frontend/: index.html
web_app/frontend/css/: style.css
web_app/frontend/js/: app.js
web_app/static/: index.html
web_app/static/css/: style.css
web_app/static/js/: app.js
(+20 files in other folders)
